Fix ghsgen button on lot number rows.

--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -138,7 +138,7 @@
                                 <i class="fa fa-trash" disabled="disabled"></i>
                             </button>
                             <a href="" lotNum="{{item.lot_number}}" itemCode="{{ item.item_code }}" class="GHSLink" style="margin-right: 5px;">
-                                <button dataItemID="{{ item.id }}"  type="button" class="btn btn-outline-danger GHSbtn">
+                                <button dataItemID="{{ item.id }}"  type="button" class="btn btn-primary GHSbtn">
                                     <i class="fa fa-file" disabled="disabled"></i>
                                 </button>
                             </a>
