Fix the lotnum GHS things

--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -139,7 +139,7 @@
                             </button>
                             <a href="" lotNum="{{item.lot_number}}" itemCode="{{ item.item_code }}" class="GHSLink" style="margin-right: 5px;">
                                 <button dataItemID="{{ item.id }}"  type="button" class="btn btn-primary GHSbtn">
-                                    <i class="fa fa-file" disabled="disabled"></i>
+                                    GHS
                                 </button>
                             </a>
                         </td>
