--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -9,23 +9,25 @@
 {% block content %}
     <div class='text-center'>
         <h1>Lot Numbers</h1>
-        {% if user.is_staff %}
-            {% if not edit_yes_no or edit_yes_no == 'no' %}
-                <button id="addLotNumButton" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addLotNumModal">
-                    Add New Lot
-                </button>
-            {% elif edit_yes_no == 'yes' %}
-                <a href="/core/lot-num-records/?load-add-modal=True">
-                    <button id="addLotNumButton" class="btn btn-primary">
+        <div id="topButtonContainer">
+            {% if user.is_staff %}
+                {% if not edit_yes_no or edit_yes_no == 'no' %}
+                    <button id="addLotNumButton" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addLotNumModal">
                         Add New Lot
                     </button>
-                </a>
+                {% elif edit_yes_no == 'yes' %}
+                    <a href="/core/lot-num-records/?load-add-modal=True">
+                        <button id="addLotNumButton" class="btn btn-primary">
+                            Add New Lot
+                        </button>
+                    </a>
+                {% endif %}
+                <button id="create_list" style="display:none;">Create Count List</button>
+                <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#deleteLotNumModal">
+                    Delete Lots
+                </button>
             {% endif %}
-            <button id="create_list">Create Count List</button>
-            <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#deleteLotNumModal">
-                Delete Lots
-            </button>
-        {% endif %}
+        </div>
     </div>
     
     {% include 'core/modals/add-lotnum-modal.html' %}
@@ -84,13 +86,22 @@
                         </div>
                     </td>
                     <td>{{ item.item_description }}</td>
-                    <td>
-                        {{ item.lot_number }}
-                        <a href="" target="_blank" lotNum="{{item.lot_number}}" itemCode="{{ item.item_code }}" class="GHSLink" style="margin-right: 5px;">
-                            <button dataItemID="{{ item.id }}"  type="button" class="btn btn-primary GHSbtn">
-                                GHS
-                            </button>
-                        </a>
+                    <td class="text-center" style="display:flex; align-items:center; justify-content:center;">
+                            {{ item.lot_number }}
+                            <div class="dropdown">
+                                <button class="btn dropdown-toggle" type="button" id="lotModDropdown" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                                <ul class="dropdown-menu" aria-labelledby="lotModDropdown">
+                                    <li><a href="" target="_blank" lotNum="{{item.lot_number}}" itemCode="{{ item.item_code }}" class="GHSLink dropdown-item">Create GHS Label</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a href="/core/lot-num-records/?edit-yes-no=yes&lot-id={{ item.id }}" class="dropdown-item">Edit Lot</a></li>
+                                    <li><a dataItemID="{{ item.id }}" class="duplicateBtn dropdown-item" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-rundate="{{ item.run_date|date:"Y-m-d" }}" data-desc="{{ item.item_description }}" data-itemcode="{{ item.item_code }}" data-desk="{{ item.desk }}"  data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
+                                        Duplicate Lot
+                                    </a></li>
+                                    <li><a dataItemID="{{ item.id }}" type="button" class="deleteBtn dropdown-item" data-bs-toggle="modal" data-bs-target="#deleteLotNumModal">
+                                        Delete Lot
+                                    </a></li>
+                                </ul>
+                            </div>
                     </td>
                     <td class='text-center'>{{ item.lot_quantity|floatformat:0 }}</td>
                     <td>{{ item.date_created|date:"M d, Y" }}</td>
@@ -133,17 +144,7 @@
                             {% endif %}
                         </td>
                         <td style="display:flex;">
-                            <a href="/core/lot-num-records/?edit-yes-no=yes&lot-id={{ item.id }}" style="margin-right: 5px;">
-                                <button dataItemID="{{ item.id }}" type="button" class="btn btn-outline-primary">
-                                    <i class="fas fa-edit" disabled="disabled"></i>
-                                </button>
-                            </a>
-                            <button dataItemID="{{ item.id }}" style="margin-right: 5px;" type="button" class="btn btn-outline-primary duplicateBtn" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-rundate="{{ item.run_date|date:"Y-m-d" }}" data-desc="{{ item.item_description }}" data-itemcode="{{ item.item_code }}" data-desk="{{ item.desk }}"  data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
-                                <i class="far fa-clone" disabled="disabled"></i>
-                            </button>
-                            <button dataItemID="{{ item.id }}" type="button" class="btn btn-outline-danger deleteBtn" data-bs-toggle="modal" data-bs-target="#deleteLotNumModal">
-                                <i class="fa fa-trash" disabled="disabled"></i>
-                            </button>
+                            
                         </td>
                     {% endif %}
                 </tr>
