--- a/app/core/static/core/css/lotNumRecords.css
+++ b/app/core/static/core/css/lotNumRecords.css
@@ -17,6 +17,15 @@
 #topButtonContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: max-content;
+    margin: auto;
+}
+
+.topButton {
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .deleteBtn {
