--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -91,14 +91,16 @@
                                 <button class="btn dropdown-toggle" type="button" id="lotModDropdown" data-bs-toggle="dropdown" aria-expanded="false"></button>
                                 <ul class="dropdown-menu" aria-labelledby="lotModDropdown">
                                     <li><a href="" target="_blank" lotNum="{{item.lot_number}}" itemCode="{{ item.item_code }}" class="GHSLink dropdown-item">Create GHS Label</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a href="/core/lot-num-records/?edit-yes-no=yes&lot-id={{ item.id }}" class="dropdown-item">Edit Lot</a></li>
-                                    <li><a dataItemID="{{ item.id }}" class="duplicateBtn dropdown-item" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-rundate="{{ item.run_date|date:"Y-m-d" }}" data-desc="{{ item.item_description }}" data-itemcode="{{ item.item_code }}" data-desk="{{ item.desk }}"  data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
-                                        Duplicate Lot
-                                    </a></li>
-                                    <li><a dataItemID="{{ item.id }}" type="button" class="deleteBtn dropdown-item" data-bs-toggle="modal" data-bs-target="#deleteLotNumModal">
-                                        Delete Lot
-                                    </a></li>
+                                    {% if user.is_staff %}
+                                        <li><hr class="dropdown-divider"></li>
+                                        <li><a href="/core/lot-num-records/?edit-yes-no=yes&lot-id={{ item.id }}" class="dropdown-item">Edit Lot</a></li>
+                                        <li><a dataItemID="{{ item.id }}" class="duplicateBtn dropdown-item" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-rundate="{{ item.run_date|date:"Y-m-d" }}" data-desc="{{ item.item_description }}" data-itemcode="{{ item.item_code }}" data-desk="{{ item.desk }}"  data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
+                                            Duplicate Lot
+                                        </a></li>
+                                        <li><a dataItemID="{{ item.id }}" type="button" class="deleteBtn dropdown-item" data-bs-toggle="modal" data-bs-target="#deleteLotNumModal">
+                                            Delete Lot
+                                        </a></li>
+                                    {% endif %}
                                 </ul>
                             </div>
                     </td>
