Purge weak code from the ghslabel page

--- a/app/core/templates/core/GHSlabelGen/ghsprinttemplate.html
+++ b/app/core/templates/core/GHSlabelGen/ghsprinttemplate.html
@@ -1,13 +1,17 @@
-{% extends 'base.html' %}
 {% load static %}
 {% block title %}<title>GHS Label</title>{% endblock %}
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href ="{% static 'core/css/GHSLabel.css' %}">
+    <link href="https://code.jquery.com/ui/1.13.1/themes/cupertino/jquery-ui.css" rel="stylesheet" type="text/css" /> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>  
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="module" src="{% static 'core/js/pageModules/ghsLabelTemplate.js' %}"></script>
 {% endblock %}
 
 {% block content %}
-
+<div class="pageContainer">
     <div class="noPrint" id="linkContainer">
         <a href="/core/display-ghs-label-search">Return to search page</a>
     </div>
@@ -29,8 +33,9 @@
         <img class="hazardsimage" src="{{ image_url }}">
     </div>
 
-    <div class="noPrint buttonContainer">
-        <button class="btn btn-primary" id="lotNumberButton">Show Lot Number Fields</button>
-    </div>
+
+        <button class="btn btn-primary noPrint" id="lotNumberButton">Show Lot Number Fields</button>
+
+</div>
 
 {% endblock content %}
