--- a/app/core/static/core/css/GHSLabel.css
+++ b/app/core/static/core/css/GHSLabel.css
@@ -1,8 +1,15 @@
+.pageContainer {
+    width: 816px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+}
+
 .labelContainer {
     box-sizing: border-box;
     width: 816px; /* 8.5 inches */
     height: 528px; /* Half of 11 inches */
-    border: 1px solid #000; /* Just to visualize the containers */
 }
 
 .imageContainer {
@@ -31,17 +38,14 @@ img {
     display: block;
 }
 
-.buttonContainer { 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
   /* Assuming a standard resolution of 96 DPI */
 @media print {
     .labelContainer {
       width: 8.5in;
       height: 5.5in;
+    }
+    .site-header {
+        display: none !important;
     }
     .lotNumberField {
         border: none !important;
@@ -49,4 +53,25 @@ img {
     .noPrint {
         display: none !important;
     }
+    .printableArea {
+        width: 100%;
+        height: 90%; /* Adjust this value as needed */
+        box-sizing: border-box;
+    }
+    body {
+        margin: 0px;
+    }
+    .row .col-md-12 {
+        margin: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .contentarea {
+        margin: 25mm;
+        border: none;
+    }
+}
+
+@page {
+    size:auto;
 }
