--- a/app/core/templates/core/blendlabeltemplate.html
+++ b/app/core/templates/core/blendlabeltemplate.html
@@ -1,40 +1,46 @@
-{% extends 'base.html' %}
 {% load static %}
 {% block title %}<title>Blend Label</title>{% endblock %}
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href ="{% static 'core/css/blendlabeltemplate.css' %}">
+    <link rel="stylesheet" type="text/css" href ="{% static 'core/css/GHSLabel.css' %}">
+    <link href="https://code.jquery.com/ui/1.13.1/themes/cupertino/jquery-ui.css" rel="stylesheet" type="text/css" /> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>  
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="module" src="{% static '' %}"></script>
 {% endblock %}
 
 
 {% block content %}
-<div id="labelContainer">
-    <div id="topSection">
-        <h1>{{ label_contents.item_code }}</h1>
-        <h2>{{ label_contents.item_description }}</h2>
-        <h1>{{ label_contents.lot_number }}</h1>
+    <div id="labelContainer">
+        <div id="topSection">
+            <h1>{{ label_contents.item_code }}</h1>
+            <h2>{{ label_contents.item_description }}</h2>
+            <h1>{{ label_contents.lot_number }}</h1>
+        </div>
+        <div id="warningContainer">
+            <div class="protectionImageContainer">
+                {% if label_contents.item_protection == "UV and Freeze" or label_contents.item_protection == "UV" %}
+                    <img class="warningImage" src="{% static 'core/media/NO_UV.png' %}" height="50" width="50">
+                {% else %}
+                    <img class="warningImage" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=">
+                {% endif %}
+            </div>
+            <h2 class="text-center">
+                {{ label_contents.item_protection }}
+                <br>
+                Protection Required
+            </h2>
+            <div class="protectionImageContainer">
+                {% if label_contents.item_protection == "UV and Freeze" or label_contents.item_protection == "Freeze" %}
+                    <img class="warningImage" src="{% static 'core/media/NO_FREEZE.png' %}" height="50" width="50">
+                {% else %}
+                    <img class="warningImage" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=">
+                {% endif %}
+            </div>
+        </div>        
     </div>
-    <div id="warningContainer">
-        <div class="protectionImageContainer">
-            {% if label_contents.item_protection == "UV and Freeze" or label_contents.item_protection == "UV" %}
-                <img class="warningImage" src="{% static 'core/media/NO_UV.png' %}" height="50" width="50">
-            {% else %}
-                <img class="warningImage" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=">
-            {% endif %}
-        </div>
-        <h2 class="text-center">
-            {{ label_contents.item_protection }}
-            <br>
-            Protection Required
-        </h2>
-        <div class="protectionImageContainer">
-            {% if label_contents.item_protection == "UV and Freeze" or label_contents.item_protection == "Freeze" %}
-                <img class="warningImage" src="{% static 'core/media/NO_FREEZE.png' %}" height="50" width="50">
-            {% else %}
-                <img class="warningImage" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=">
-            {% endif %}
-        </div>
-    </div>        
-</div>
-
+    <br>
+    <button id="printButton">Print</button>
 {% endblock content %}
