--- a/app/core/templates/core/blendlabeltemplate.html
+++ b/app/core/templates/core/blendlabeltemplate.html
@@ -2,13 +2,14 @@
 {% block title %}<title>Blend Label</title>{% endblock %}
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href ="{% static 'core/css/blendlabeltemplate.css' %}">
-    <link rel="stylesheet" type="text/css" href ="{% static 'core/css/GHSLabel.css' %}">
     <link href="https://code.jquery.com/ui/1.13.1/themes/cupertino/jquery-ui.css" rel="stylesheet" type="text/css" /> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>  
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script type="module" src="{% static '' %}"></script>
+    <script type="text/javascript" src="{% static 'core/js/thirdPartyLibraries/BrowserPrint-3.1.250.min.js' %}"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    {% comment %} <script type="module" src="{% static 'core/js/pageModules/blendlabeltemplate.js' %}"></script> {% endcomment %}
 {% endblock %}
 
 
@@ -43,4 +44,58 @@
     </div>
     <br>
     <button id="printButton">Print</button>
+    <script>
+        
+
+        document.getElementById("printButton").addEventListener('click', function() {
+            html2canvas(document.querySelector("#labelContainer")).then(canvas => {
+                var selected_device;
+                function setup() {
+                    //Get the default device from the application as a first step. Discovery takes longer to complete.
+                    BrowserPrint.getDefaultDevice("printer", function(device) {
+                            //Add device to list of devices and to html select element
+                            selected_device = device;
+                            devices.push(device);
+                            var html_select = document.getElementById("selected_device");
+                            var option = document.createElement("option");
+                            option.text = device.name;
+                            html_select.add(option);
+        
+                            //Discover any other devices available to the application
+                            BrowserPrint.getLocalDevices(function(device_list){
+                                for(var i = 0; i < device_list.length; i++)
+                                {
+                                    //Add device to list of devices and to html select element
+                                    var device = device_list[i];
+                                    if(!selected_device || device.uid != selected_device.uid)
+                                    {
+                                        devices.push(device);
+                                        var option = document.createElement("option");
+                                        option.text = device.name;
+                                        option.value = device.uid;
+                                        html_select.add(option);
+                                    }
+                                }
+        
+                            }, function(){alert("Error getting local devices")},"printer");
+        
+                        }, function(error){
+                            alert(error);
+                        })
+                    }
+                setup();
+                let img = canvas.toDataURL("image/jpeg");
+                console.log(img)
+                //let imgElement = document.createElement('img');
+                //imgElement.src = img;
+                //document.body.appendChild(imgElement);
+                //window.open(img, '_blank');
+                selected_device.convertAndSendFile(img);
+            });
+            
+        });
+
+    
+    </script>
+
 {% endblock content %}
