--- a/app/core/templates/core/blendlabeltemplate.html
+++ b/app/core/templates/core/blendlabeltemplate.html
@@ -7,9 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>  
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{% static 'core/js/thirdPartyLibraries/BrowserPrint-3.1.250.min.js' %}"></script>
+    <script type="module" src="{% static 'core/js/pageModules/blendlabeltemplate.js' %}"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    {% comment %} <script type="module" src="{% static 'core/js/pageModules/blendlabeltemplate.js' %}"></script> {% endcomment %}
 {% endblock %}
 
 {% block content %}
@@ -77,110 +76,7 @@
     
     </script>
     <script type="text/javascript">
-        var selected_device;
-        var devices = [];
-        function setup()
-        {
-            //Get the default device from the application as a first step. Discovery takes longer to complete.
-            BrowserPrint.getDefaultDevice("printer", function(device)
-                    {
-                
-                        //Add device to list of devices and to html select element
-                        selected_device = device;
-                        devices.push(device);
-                        var html_select = document.getElementById("selected_device");
-                        var option = document.createElement("option");
-                        option.text = device.name;
-                        html_select.add(option);
-                        
-                        //Discover any other devices available to the application
-                        BrowserPrint.getLocalDevices(function(device_list){
-                            for(var i = 0; i < device_list.length; i++)
-                            {
-                                //Add device to list of devices and to html select element
-                                var device = device_list[i];
-                                if(!selected_device || device.uid != selected_device.uid)
-                                {
-                                    devices.push(device);
-                                    var option = document.createElement("option");
-                                    option.text = device.name;
-                                    option.value = device.uid;
-                                    html_select.add(option);
-                                }
-                            }
-                            
-                        }, function(){alert("Error getting local devices")},"printer");
-                        
-                    }, function(error){
-                        alert(error);
-                    })
-        }
-        function getConfig(){
-            BrowserPrint.getApplicationConfiguration(function(config){
-                alert(JSON.stringify(config))
-            }, function(error){
-                alert(JSON.stringify(new BrowserPrint.ApplicationConfiguration()));
-            })
-        }
-        function writeToSelectedPrinter(dataToWrite)
-        {
-            selected_device.send(dataToWrite, undefined, errorCallback);
-        }
-        var readCallback = function(readData) {
-            if(readData === undefined || readData === null || readData === "")
-            {
-                alert("No Response from Device");
-            }
-            else
-            {
-                alert(readData);
-            }
-            
-        }
-
-        var errorCallback = function(errorMessage){
-            alert("error:" + errorMessage);	
-        }
-
-        function readFromSelectedPrinter()
-        {
         
-            selected_device.read(readCallback, errorCallback);
-            
-        }
-        function getDeviceCallback(deviceList)
-        {
-            alert("Devices: \n" + JSON.stringify(deviceList, null, 4))
-        }
-        
-        function sendImage(imageUrl)
-        {
-            html2canvas(document.querySelector("#labelContainer")).then(canvas => {
-                let img;
-                img = canvas.toDataURL("image/jpeg");
-                let options = { 
-                    'scale' : 3.5
-                };
-                selected_device.convertAndSendFile(img, undefined, errorCallback, options)
-            }); 
-        }
-        function sendFile(fileUrl){
-            url = window.location.href.substring(0, window.location.href.lastIndexOf("/"));
-            url = url + "/" + fileUrl;
-            selected_device.sendFile(url, undefined, errorCallback)
-        }
-        function onDeviceSelected(selected)
-        {
-            for(var i = 0; i < devices.length; ++i){
-                if(selected.value == devices[i].uid)
-                {
-                    selected_device = devices[i];
-                    return;
-                }
-            }
-        }
-        window.onload = setup;
-
 
         
         </script>
