--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -35,6 +35,10 @@
     {% include 'core/modals/delete-lotnum-modal.html' %}
 
     <br><br>
+    <dialog id="blendLabelDialog">
+        testes
+        {% include 'core/modals/blendlabeltemplate.html' %}
+    </dialog>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
@@ -91,7 +95,7 @@
                                 <button class="btn dropdown-toggle" type="button" id="lotModDropdown" data-bs-toggle="dropdown" aria-expanded="false"></button>
                                 <ul class="dropdown-menu" aria-labelledby="lotModDropdown">
                                     <li><a href="" target="_blank" lotNum="{{item.lot_number}}" itemCode="{{ item.item_code }}" class="GHSLink dropdown-item">Create GHS Label</a></li>
-                                    <li><a data-print-url="/core/print-blend-label?encodedItemCode={{ item.encoded_item_code }}&lotNumber={{item.lot_number}}&printQuantity=" class="dropdown-item blendLabelLink">Create Small Tote Label</a></li>
+                                    <li><a class="dropdown-item blendLabelLink">Create Small Tote Label</a></li>
                                     {% if user.is_staff %}
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a href="/core/lot-num-records/?edit-yes-no=yes&lot-id={{ item.id }}" class="dropdown-item">Edit Lot</a></li>
