--- a/app/core/templates/core/modals/blendlabeltemplate.html
+++ b/app/core/templates/core/modals/blendlabeltemplate.html
@@ -38,7 +38,7 @@
     </div>
     <br>
     <button id="printButton">Print</button>
-    <label for="labelQuentity">Quantity</label>
-    <input id="labelQuentity" type="number"></input>
+    <label for="labelQuantity">Quantity</label>
+    <input id="labelQuatity" type="number"></input>
 
 {% endblock content %}
