--- a/app/core/static/core/css/blendlabeltemplate.css
+++ b/app/core/static/core/css/blendlabeltemplate.css
@@ -4,9 +4,9 @@
     display: flex;
     flex-direction: column;
     border-radius: 12px;
+    border: 1px solid black;
     justify-content: space-evenly;
     margin: auto;
-    transform: rotate(90deg);
 }
 
 #topSection {
@@ -20,7 +20,7 @@ h1 {
 }
 
 h2 {
-    font-size: 36px;
+    font-size: 32px;
 }
 
 .warningImage {
@@ -31,4 +31,14 @@ h2 {
 #warningContainer {
     display: flex;
     justify-content: space-evenly;
+}
+
+#labelQuantity {
+    width: 30px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
