Begin implementing a label button on the production schedule.

--- a/app/core/templates/core/modals/blendlabeltemplate.html
+++ b/app/core/templates/core/modals/blendlabeltemplate.html
@@ -26,7 +26,7 @@
         </div>        
     </div>
     <br>
-    <button id="printButton" class="btn btn-secondary">Print</button>
+    <button id="blendLabelPrintButton" class="btn btn-secondary">Print</button>
     <label for="labelQuantity">Quantity</label>
     <input id="labelQuantity" type="number"></input>
     <button id="printCancelButton" onclick='document.getElementById("blendLabelDialog").close()'>Cancel</button>
