--- a/app/prodverse/templates/prodverse/productionschedule.html
+++ b/app/prodverse/templates/prodverse/productionschedule.html
@@ -12,8 +12,10 @@
 {% endblock scripts %}
 
 
+
 <!-- Body Blocks -->
 {% block content %} 
+{% include 'core/modals/blendlabeltemplate.html' %}
   <div id="controlbuttons" style="display:flex; justify-content: space-between;">
     <div class="dropdown">
       <button class="btn btn-primary btn-lg dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
