Add label lot number dropdown.

--- a/app/core/templates/core/modals/blendlabeltemplate.html
+++ b/app/core/templates/core/modals/blendlabeltemplate.html
@@ -29,6 +29,7 @@
     <button id="blendLabelPrintButton" class="btn btn-secondary">Print</button>
     <label for="labelQuantity">Quantity</label>
     <input id="labelQuantity" type="number"></input>
+    <select id="label-lot-number-dropdown"></select>
     <button id="printCancelButton" onclick='document.getElementById("blendLabelDialog").close()'>Cancel</button>
     
     <img class="warningImage" id="blend-label-uv-img" src="{% static 'core/media/NO_UV.png' %}" height="50" width="50" style="display:none;">
