Update styling on blendlabeltemplate.

--- a/app/core/static/core/css/blendlabeltemplate.css
+++ b/app/core/static/core/css/blendlabeltemplate.css
@@ -9,6 +9,10 @@
     margin: auto;
 }
 
+.controlsContainer{
+    display: flex;
+}
+
 #topSection {
     display: flex;
     flex-direction: column;
