Add quantity autofill and styling for blend tote labels.

--- a/app/core/static/core/css/lotNumRecords.css
+++ b/app/core/static/core/css/lotNumRecords.css
@@ -14,6 +14,10 @@
     background-color: rgb(255, 237, 138);
 }
 
+.lotModDropdownUL {
+    cursor: pointer;
+}
+
 #topButtonContainer {
     display: flex;
     flex-direction: column;
