--- a/app/core/templates/core/modals/blendlabeltemplate.html
+++ b/app/core/templates/core/modals/blendlabeltemplate.html
@@ -27,15 +27,22 @@
     </div>
     <br>
     <div class="controlsContainer">
-        <button id="blendLabelPrintButton" class="btn btn-secondary">Print</button>
-        <label for="labelQuantity">Quantity</label>
-        <input id="labelQuantity" type="number"></input>
-        <button id="printCancelButton" onclick='document.getElementById("blendLabelDialog").close()'>Cancel</button>
+        <div class="controlsRow text-center">
+            <label for="label-lot-number-dropdown">Lot Number:</label>
+            <select id="label-lot-number-dropdown"></select>
+        </div>
         <br>
-    </div>
-    <div class="controlsContainer">
-        <label for="label-lot-number-dropdown">Lot Number:kin</label>
-        <select id="label-lot-number-dropdown"></select>
+        <div class="controlsRow text-center">
+            <label for="labelQuantity">Quantity:</label>
+            <input id="labelQuantity" type="number" value="1"></input>
+            <br>
+        </div>
+        <div class="controlsRow text-center">
+            <button id="blendLabelPrintButton" class="btn btn-secondary">Print</button>
+            <button id="printCancelButton" onclick='document.getElementById("blendLabelDialog").close()'>Cancel</button>
+            <br>
+        </div>
+        
     </div>
     
     
